--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "compression": "^1.7.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "firebase-admin": "^9.4.2",
     "if-env": "^1.0.4",
     "mongoose": "^5.11.13",
     "morgan": "^1.10.0"
