--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "bugs": {
     "url": "https://github.com/timsilby/bills-app/issues"
   },
-  "homepage": "https://github.com/timsilby/bills-app#readme",
+  "homepage": "https://bill-boss.herokuapp.com/",
   "dependencies": {
     "compression": "^1.7.4",
     "cors": "^2.8.5",
