--- a/client/package.json
+++ b/client/package.json
@@ -4,14 +4,18 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "@date-io/dayjs": "^1.3.13",
     "@fontsource/roboto": "^4.1.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
     "axios": "^0.21.1",
+    "dayjs": "^1.10.4",
     "firebase": "^8.2.4",
+    "formik": "^2.2.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
